<resources>

    <string name="app_name">Transport</string>
    <string name="menu_settings">Settings</string>
    <string name="about">О приложении</string>
    <string name="stations">Остановки</string>
    <string name="settings">Настройки</string>
    <string name="timetable">Транспорт</string>
    <string name="coperight">Yakimchik Sergei ©</string>
    <string name="version">version 0.1.0</string>
    <string name="header">Расписание транспорта Минска</string>
    <string name="all_settings">Общие настройки</string>
    <string name="pr_time">Time</string>
    <string name="past">Взгляд в прошлое</string>
    <string name="past_summary">Полезно знать, какой транспорт убыл</string>
    <string name="future">Взгляд в будущее</string>
    <string name="future_summary">Какой транспорт прибудет на остановку</string>
    <string name="min">мин</string>
    <string name="toast_past">Взгляд в прошлое установлен на</string>
    <string name="toast_future">Взгляд в будущее установлен на</string>
    <string name="pc_past">PastSeekBarPreference</string>
    <string name="pc_future">FutureSeekBarPreference</string>
    <string name="search_station">Поиск остановки</string>
    <string name="buses">Автобусы</string>
    <string name="trollybuses">Троллейбусы</string>
    <string name="trams">Трамваи</string>
    <string name="name_station">Остановка:</string>
    <string name="type_transport">Тип транспорта:</string>
    <string name="ok">Поиск</string>
    <string name="result">Результат поиска:</string>
    <string name="forthright">Прямо</string>
    <string name="back">Обратно</string>
    <string name="direction">Направление:</string>
    <string name="number_tr">Номер:</string>
    <string name="current_time">Текущее время:</string>
    <string name="dialog">Пожалуйста, выберите направление</string>
    <string name="about_developer">О разработчике:</string>
    <string name="feedback">Обратная связь:</string>
    <string name="about_application">Transport - это небольшое приложение, представляющее собой расписание городского транспорта г.Минска.</string>
    <string name="my_mail">По всем вопросам и ошибкам пишите на yakimchik7@gmail.com</string>

</resources>