<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@drawable/doroga">
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="10dp">
        
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/name_station"
	        android:textColor="@color/white"
	        android:textSize="20dp"/>
	    
	    <AutoCompleteTextView 
	        android:id="@+id/auto_complete_station"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:completionThreshold="1"
	        android:layout_marginLeft="5dp"
	        android:textColor="@color/black"/>
        
    </LinearLayout>
    
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
        
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/type_transport"
	        android:textColor="@color/white"
	        android:textSize="18dp"/>
	    
	    <RadioGroup
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
	    	
	        <RadioButton 
	            android:id="@+id/busRadion"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/buses"
	            android:textColor="@color/white"
	            android:textSize="20sp"/>
	        
	        <RadioButton 
	            android:id="@+id/trollRadion"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/trollybuses"
	            android:textColor="@color/white"
	            android:textSize="20sp"/>
	        
	        <RadioButton 
	            android:id="@+id/tramRadion"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/trams"
	            android:textColor="@color/white"
	            android:textSize="20sp"/>
	        
	    </RadioGroup>
        
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="5dp">
        
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/number_tr"
	        android:textColor="@color/white"
	        android:textSize="20dp"/>
	    
	    <AutoCompleteTextView 
	        android:id="@+id/auto_complete_transport"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:completionThreshold="1"
	        android:layout_marginLeft="10dp"
	        android:textColor="@color/black"/>
        
    </LinearLayout>
    
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
        
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/direction"
	        android:textColor="@color/white"
	        android:textSize="20dp"/>
        
        <CheckBox 
            android:id="@+id/chechbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forthright"
            android:textColor="@color/white"
	        android:textSize="20sp"
	        android:layout_marginLeft="10dp"/>
        
    </LinearLayout>
    
    <Button
        android:id="@+id/okButton"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/ok"
        android:textSize="23dp" />
    
</LinearLayout>