<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:background="@color/gray61">
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/current_time"
	        android:textColor="@color/yellow"
	        android:textSize="20dp"/>
        
        <DigitalClock 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"/>
        
    </LinearLayout>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/past"
        android:textColor="@color/firebrick"
        android:textSize="20dp"
        android:layout_marginTop="5dp"/>
    
    <ListView 
        android:id="@+id/goneTransportListView"
        android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:layout_marginTop="10dp"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/future"
        android:textColor="@color/firebrick"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>
    
    <ListView 
        android:id="@+id/arrivingTransportListView"
        android:layout_width="fill_parent"
       	android:layout_height="wrap_content"/>
    
</LinearLayout>